<resources>
    <string name="app_name">Egar</string>

    <string name="my_map_api_key">AIzaSyBnHGNoiS7uqilxPTK_g_T4Ek87NfuYIVA</string>


    //Headings
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="evaluation">Evaluation</string>
    <string name="choose_your_preferred_payment_n_method">Choose your preferred payment \n method</string>
    <string name="the_total_amount">The total amount</string>
    <string name="value_rent">Value rent</string>
    <string name="confirmation_the_egar">Confirmation The Egar</string>
    <string name="egar">Egar</string>
    <string name="offers">Offers</string>
    <string name="modify_personal_information">Modify personal information</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reservation">Reservation :</string>
    <string name="delivery_request">Delivery request</string>
    <string name="add_a_title">Add a title</string>
    <string name="order_number">Order number</string>
    <string name="order_details">Order details</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvv">CVV</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>